LU-14126 e2fsck: update mmp block race

Update mmp block is only expected in one thread, @mmp_update_thread
is used to get/set active thread number, however this should
be set globally shared with different threads rather than be private
per thread.

Fixes: 7284939c57618 ("LU-8465 e2fsck: update mmp block in one thread")
Change-Id: Id3c4ed80003cf9caecb8814ac7b03fabeb83c8bd
Signed-off-by: Wang Shilong <wshilong@ddn.com>